[project]
name = "agentic-rag"
version = "0.1.0"
description = "A compact implementation of an agentic RAG loop with sufficient-context checking."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "AgenticRAG Contributors" }]
dependencies = []

[project.optional-dependencies]
bench = [
    "numpy>=1.26",
    "faiss-cpu>=1.8",
    "turbovec>=0.1",
]

[project.scripts]
agentic-rag-demo = "agentic_rag.demo:main"
agentic-rag-benchmark = "agentic_rag.benchmark:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
